packages/ignition/src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@30,300,0,0");
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --icons-fade: linear-gradient(90deg, #fff 65%, transparent);
  --scrollbar-track-bg: theme("colors.slate.100");
  --scrollbar-track-thumb: theme("colors.slate.300");
  --dark-scrollbar-track-bg: theme("colors.slate.900");
  --dark-scrollbar-track-thumb: theme("colors.slate.700");
}

html,
body {
  overflow-x: hidden;
  width: 100%;
  max-width: 100%;
}

html {
  height: -webkit-fill-available;
}

@media (prefers-color-scheme: dark) {
  html {
    background-color: theme("colors.slate.900");
  }
}

* {
  scrollbar-gutter: stable;
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  background: var(--scrollbar-track-bg);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  opacity: 0.8;
  background: var(--scrollbar-track-thumb);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
  opacity: 1;
}

.thin-scroll::-webkit-scrollbar {
  width: 1px;
  height: 1px;
}
.thin-scroll::-webkit-scrollbar-track {
  border-radius: 1px;
}

.thin-scroll::-webkit-scrollbar-thumb {
  border-radius: 1px;
}

.dark ::-webkit-scrollbar-track {
  background: var(--dark-scrollbar-track-bg);
}

.dark ::-webkit-scrollbar-thumb {
  background: var(--dark-scrollbar-track-thumb);
}

@layer componenets {
  .modal-context {
    opacity: 0;
  }

  .theme-selector,
  .modal-context {
    min-height: 100vh;
    /* mobile viewport bug fix */
    min-height: -webkit-fill-available;
  }

  input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: none;
    height: 16px;
    width: 16px;
    margin-left: 0.4em;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
    cursor: pointer;
  }

  .content-area {
    height: 100%;
  }

  .no-wrap > * {
    text-wrap: nowrap;
  }

  .pre code span.line {
    display: block;
  }

  .pre code span {
    white-space: pre;
  }

  .no-backtick code::before,
  .no-backtick code::after {
    content: "";
  }

  code::before,
  code::after {
    content: "`";
  }

  @media (max-width: 1024px) {
    .icon-info-area {
      height: calc(100vh - theme(height.20));
    }
  }

  @media (min-width: 1024px) {
    .content-area {
      height: calc(100vh - theme(height.16));
      overflow: hidden;
    }
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

